Initial commit for Creating project structure, helper classes for both API and webDriver